--- a/DjangoCodes/MovieApp/app/templates/base.html
+++ b/DjangoCodes/MovieApp/app/templates/base.html
@@ -17,7 +17,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="{% url 'index' %}">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Link</a>
@@ -38,8 +38,13 @@
             </li>
           </ul>
           
-          <a href="{% url 'login' %}" class="btn btn-primary mr-3">Login</a>
-          <a href="#" class="btn btn-primary mr-3">Register</a>
+          {% if name %}
+            <p>Welcome {{name}}</p>
+          {% else %}
+            <a href="{% url 'login' %}" class="btn btn-primary mr-3">Login</a>
+            <a href="{% url 'register' %}" class="btn btn-primary mr-3">Register</a>
+          {% endif %}
+
 
           <form class="form-inline my-2 my-lg-0">
             <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
