--- a/DjangoCodes/MovieApp/app/templates/index.html
+++ b/DjangoCodes/MovieApp/app/templates/index.html
@@ -12,7 +12,7 @@
                           <h5 class="card-title">{{m.1}}</h5>
                           <p>Genre : {{m.4}}</p>
                           <p>IMDB Rating : {{m.5}}</p>
-                          <a href="#" class="btn btn-primary">See Details</a>
+                          <a href="{% url 'details' m.0 %}" class="btn btn-primary">See Details</a>
                         </div>
                       </div>
                 </div>
