--- a/DjangoCodes/MovieApp/app/templates/register.html
+++ b/DjangoCodes/MovieApp/app/templates/register.html
@@ -8,15 +8,16 @@
     {% csrf_token %}
     <div class="form-group">
         <label for="exampleInputName1">Enter Name</label>
-        <input type="text" class="form-control" id="exampleInputName1" name="u_name">
+        <input type="text" required class="form-control" id="exampleInputName1" name="u_name">
       </div>
     <div class="form-group">
       <label for="exampleInputEmail1">Email address</label>
-      <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" name="u_email">
+      <input type="email" required class="form-control" id="exampleInputEmail1" name="u_email">
+      <p id="msg" style="color:red;">{{msg}}</p>
     </div>
     <div class="form-group">
       <label for="exampleInputPassword1">Password</label>
-      <input type="password" class="form-control" name="u_pwd" id="exampleInputPassword1">
+      <input type="password" required class="form-control" name="u_pwd" id="exampleInputPassword1">
     </div>
     <div class="form-group form-check">
       <input type="checkbox" class="form-check-input" id="exampleCheck1">
@@ -25,4 +26,18 @@
     <button type="submit" class="btn btn-primary">Submit</button>
   </form>
 
+
+  <script>
+        $("#exampleInputEmail1").blur(function() {
+          var email = $(this).val();
+          $.ajax({
+            method : 'get',
+            dataType : 'json',
+            url : '/netflix/validate?u_email='+email,
+            success : function(data) {
+              $("#msg").html(data.msg);
+            } 
+          })
+        })
+  </script>
 {% endblock %}
